--- a/src/agent-host/ui/src/templates/index.jinja
+++ b/src/agent-host/ui/src/templates/index.jinja
@@ -31,6 +31,7 @@
         {% include 'partials/modals/_share.jinja' %}
         {% include 'partials/modals/_settings.jinja' %}
         {% include 'partials/modals/_exam_select.jinja' %}
+        {% include 'partials/modals/_permissions.jinja' %}
 
         {# Toast Container for notifications #}
         <div id="toast-container" class="toast-container position-fixed bottom-0 end-0 p-3"></div>
