--- a/src/agent-host/ui/src/templates/partials/_header.jinja
+++ b/src/agent-host/ui/src/templates/partials/_header.jinja
@@ -10,10 +10,8 @@ App header with branding, navigation, and user controls
             <i class="bi bi-layout-sidebar"></i>
         </button>
         <h1 class="app-title">
-            <a href="#" id="app-title-link" class="app-title-link"
-               data-bs-toggle="tooltip"
-               data-bs-placement="bottom"
-               title="Click to return to Welcome view">
+            <a href="#" id="app-title-link" class="app-title-link" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                title="Click to return to Welcome view">
                 <i class="bi bi-robot"></i>
                 <span class="app-title-text" id="header-app-name">{{ app_name }}</span>
             </a>
