--- a/src/knowledge-manager/ui/src/templates/index.jinja
+++ b/src/knowledge-manager/ui/src/templates/index.jinja
@@ -40,6 +40,11 @@
         <div id="terms-page" class="page-content d-none" data-page="terms">
             {% include 'partials/pages/_terms.jinja' %}
         </div>
+
+        <!-- Admin Page -->
+        <div id="admin-page" class="page-content d-none" data-page="admin">
+            {% include 'partials/pages/_admin.jinja' %}
+        </div>
     </div>
 </div>
 
