--- a/src/knowledge-manager/ui/src/templates/partials/footer.jinja
+++ b/src/knowledge-manager/ui/src/templates/partials/footer.jinja
@@ -1,5 +1,5 @@
 <footer class="footer mt-auto py-3 border-top bg-body-tertiary">
-    <div class="container-fluid">
+    <div class="container-fluid px-4">
         <div class="row align-items-center">
             <div class="col-md-4 text-center text-md-start mb-2 mb-md-0">
                 <span class="text-body-secondary">
