--- a/src/knowledge-manager/ui/src/templates/partials/pages/_namespace_modal.jinja
+++ b/src/knowledge-manager/ui/src/templates/partials/pages/_namespace_modal.jinja
@@ -5,12 +5,12 @@ NAMESPACE MODAL - View/Edit Namespace Details
 <div class="modal fade" id="namespaceModal" tabindex="-1" data-bs-backdrop="static">
     <div class="modal-dialog modal-lg modal-dialog-scrollable">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header d-flex justify-content-between align-items-center">
                 <h5 class="modal-title">
                     <i class="bi bi-collection me-2 text-primary"></i>
                     <span>Namespace Details</span>
                 </h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form id="namespace-form">
