--- a/src/knowledge-manager/ui/src/templates/partials/pages/_term_modal.jinja
+++ b/src/knowledge-manager/ui/src/templates/partials/pages/_term_modal.jinja
@@ -5,12 +5,12 @@ TERM MODAL - View/Edit Term Details
 <div class="modal fade" id="termModal" tabindex="-1" data-bs-backdrop="static">
     <div class="modal-dialog modal-lg modal-dialog-scrollable">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header d-flex justify-content-between align-items-center">
                 <h5 class="modal-title">
                     <i class="bi bi-tag me-2 text-success"></i>
                     <span>Term Details</span>
                 </h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form id="term-form">
